%% Intake State Machine
%% Reflects actual code in Intake.java
stateDiagram-v2
    [*] --> OFF

    OFF --> INTAKING : SuperStructure sets INTAKING
    INTAKING --> OFF : SuperStructure sets OFF

    OFF --> SHOOTING : SuperStructure sets SHOOTING
    SHOOTING --> OFF : SuperStructure sets OFF

    note right of OFF : Duty cycle = 0.0
    note right of INTAKING : Duty cycle = 0.75
    note right of SHOOTING : Duty cycle = 0.75<br>(same output as INTAKING)

    %% Planned but commented out
    state "Planned (commented out)" as PLANNED {
        JAMMED : Supply current >= 35A<br>Reverse at -0.5 duty cycle
    }
